--- a/index.html
+++ b/index.html
@@ -5,8 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="src/styles/main.css">
+    <script type="text/javascript" src="src/uiScript.ts" defer></script>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="headliner">
+            <h1>Treat Yt Addiction</h1>
+        </div>
+        <div class="flex">
+            <div class="box">
+                <div class="center-h">
+                    <div class="wt-container">
+                        <input placeholder="Whitelist" class="t-input" />
+                        <ul id="whitelist">
+                            <li class="wt-el">
+                                <div>
+                                    <input type="checkbox" />
+                                    <span>Pocoloco</span>
+                                </div>
+                                <div>
+                                    <i class="fa-solid fa-circle-xmark wt-rm"></i>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="box">
+
+            </div>
+        </div>
+    </div>
 </body>
 </html>
